# showcase-insurance-claims

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Brewfile  CLAUDE.md  Makefile  README.md  Tiltfile  pyproject.toml
.github/actions/docker-build/: action.yaml
.github/workflows/: build.yml  check.yml  push.yml  test-e2e.yml  tilt-integration-test.yml
agents/: Dockerfile
agents/base/: pyproject.toml
agents/base/test/: test_dummy.py
agents/claims-voice-agent/: Dockerfile  agent.py  callbacks.py  main.py  pyproject.toml
agents/claims_voice_agent/: Makefile  agent.py  main.py  pyproject.toml
agents/claims_voice_agent/src/claims_voice_agent/: __main__.py  agent.py
backend/: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  analysis-agent.yaml  claims-analysis-agent.yaml  claims-voice-agent.yaml  customer-database.yaml  frontend-deployment.yaml  frontend-service.yaml  insurance-claims-workforce.yaml  namespace.yaml  showcase-claims-frontend-deployment.yaml  showcase-claims-frontend-service.yaml  voice-agent.yaml  workforce.yaml
deploy/base/: claims-analysis-agent.yaml  claims-api.yaml  claims-database.yaml  claims-voice-agent.yaml  customer-database.yaml  insurance-claims-workforce.yaml  kustomization.yaml  mongodb.yaml  namespace.yaml  showcase-claims-frontend.yaml
deploy/base/claims-voice-agent/: agent.yaml
deploy/base/customer-database/: customer-database.yaml  kustomization.yaml
deploy/base/showcase-claims-frontend/: kustomization.yaml  showcase-claims-frontend.yaml
deploy/local/: agent-runtime-config.yaml  ai-gateway.yaml  kustomization.yaml  n8n-values.yaml  namespace.yaml  otel-tempo-config.yaml
deploy/local/agentic-layer/: ai-gateway.yaml
deploy/local/librechat/: config.yaml  values.yaml
deploy/local/n8n/: kustomization.yaml  n8n-deployment.yaml  postgres-deployment.yaml
deploy/local/observability-dashboard/: deployment.yaml  service.yaml
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/js/: app.js
frontend/src/: index.css
frontend/src/components/: ChatInterface.test.tsx  ChatInterface.tsx  ClaimsProvider.tsx  ClaimsTable.tsx  CustomerDataTable.tsx  Footer.tsx  HeroSection.tsx  claims-context.ts
frontend/src/hooks/: useAudioWebSocket.ts  useClaims.ts
frontend/src/integrations/supabase/: client.ts  types.ts
frontend/src/lib/: dateUtils.ts
frontend/src/pages/: DashboardPage.tsx  Index.tsx
mcp-servers/: Dockerfile
mcp-servers/claims-database/: .dockerignore  Dockerfile  Makefile  README.md  claims_db.py  main.py  pyproject.toml
mcp-servers/customer-database/: Dockerfile  main.py  pyproject.toml
mcp-servers/customer_database/: Dockerfile  main.py  mock_database.py  pyproject.toml
mcp-servers/customer_database/src/customer_database/: __main__.py
n8n-workflows/: Claims Analysis with AI Gateway and AI Agent.json  Claims Analysis with AI Gateway.json  Claims Analysis with Agent Gateway _ A2A.json  Claims Analysis with Agent Gateway _ OpenAI API.json
scripts/: example-transcript.txt  test-claims-agent.sh
