[project]
name = "claims-voice-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agentic-layer-sdk-adk>=0.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]