[project]
name = "claims-database"
version = "0.1.0"
description = "MCP server for persistent insurance claims storage"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "fastmcp>=0.2.0",
    "pymongo>=4.15.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]
