[project]
name = "customer-database"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0b2",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]
