[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer_database"
version = "0.1.0"
description = "MCP server providing customer data and utility tools for insurance claims processing"
authors = [
    {name = "Insurance Claims Team"},
]
dependencies = [
    "fastmcp>=0.2.0",
]
requires-python = ">=3.9"

[project.scripts]
customer_database = "customer_database.__main__:main"