[project]
name = "customer_database"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]